--- a/RYF/标准库.md
+++ b/RYF/标准库.md
@@ -369,7 +369,790 @@ var obj = { 0: 'a', 1: 'b', length: 2 };
 Array.prototype.join.call(obj, '-')
 // 'a-b'
 ```
+---
+# 包装对象
 
+## 定义
+
+对象是 JavaScript 语言最主要的数据类型，三种原始类型的值——数值、字符串、布尔值——在一定条件下，也会自动转为对象，也就是原始类型的“包装对象”。
+
+所谓“包装对象”，就是分别与数值、字符串、布尔值相对应的`Number`、`String`、`Boolean`三个原生对象。这三个原生对象可以把原始类型的值变成（包装成）对象。
+
+```javascript
+var v1 = new Number(123);
+var v2 = new String('abc');
+var v3 = new Boolean(true);
+```
+
+上面代码中，基于原始类型的值，生成了三个对应的包装对象。
+
+```javascript
+typeof v1 // "object"
+typeof v2 // "object"
+typeof v3 // "object"
+
+v1 === 123 // false
+v2 === 'abc' // false
+v3 === true // false
+```
+
+包装对象的最大目的，首先是使得 JavaScript 的对象涵盖所有的值，其次使得原始类型的值可以方便地调用某些方法。
+
+`Number`、`String`和`Boolean`如果不作为构造函数调用（即调用时不加`new`），常常用于将任意类型的值转为数值、字符串和布尔值。
+
+```javascript
+Number(123) // 123
+String('abc') // "abc"
+Boolean(true) // true
+```
+
+上面这种数据类型的转换，详见《数据类型转换》一节。
+
+总结一下，这三个对象作为构造函数使用（带有`new`）时，可以将原始类型的值转为对象；作为普通函数使用时（不带有`new`），可以将任意类型的值，转为原始类型的值。
+
+## 实例方法
+
+三种包装对象各自提供了许多实例方法，详见后文。这里介绍两种它们共同具有、从`Object`对象继承的方法：`valueOf`和`toString`。
+
+### valueOf()
+
+`valueOf`方法返回包装对象实例对应的原始类型的值。
+
+```javascript
+new Number(123).valueOf()  // 123
+new String('abc').valueOf() // "abc"
+new Boolean(true).valueOf() // true
+```
+
+### toString()
+
+`toString`方法返回对应的字符串形式。
+
+```javascript
+new Number(123).toString() // "123"
+new String('abc').toString() // "abc"
+new Boolean(true).toString() // "true"
+```
+
+## 原始类型与实例对象的自动转换
+
+原始类型的值，可以自动当作包装对象调用，即调用包装对象的属性和方法。这时，JavaScript 引擎会自动将原始类型的值转为包装对象实例，在使用后立刻销毁实例。
+
+比如，字符串可以调用`length`属性，返回字符串的长度。
+
+```javascript
+'abc'.length // 3
+```
+
+上面代码中，`abc`是一个字符串，本身不是对象，不能调用`length`属性。JavaScript 引擎自动将其转为包装对象，在这个对象上调用`length`属性。调用结束后，这个临时对象就会被销毁。这就叫原始类型与实例对象的自动转换。
+
+```javascript
+var str = 'abc';
+str.length // 3
+
+// 等同于
+var strObj = new String(str)
+// String {
+//   0: "a", 1: "b", 2: "c", length: 3, [[PrimitiveValue]]: "abc"
+// }
+strObj.length // 3
+```
+
+上面代码中，字符串`abc`的包装对象提供了多个属性。
+
+自动转换生成的包装对象是只读的，无法修改。所以，字符串无法添加新属性。
+
+```javascript
+var s = 'Hello World';
+s.x = 123;
+s.x // undefined
+```
+
+上面代码为字符串`s`添加了一个`x`属性，结果无效，总是返回`undefined`。
+
+另一方面，调用结束后，包装对象实例会自动销毁。这意味着，下一次调用字符串的属性时，实际是调用一个新生成的对象，而不是上一次调用时生成的那个对象，所以取不到赋值在上一个对象的属性。如果要为字符串添加属性，只有在它的原型对象`String.prototype`上定义（参见《面向对象编程》章节）。
+
+## 自定义方法
+
+除了原生的实例方法，包装对象还可以自定义方法和属性，供原始类型的值直接调用。
+
+比如，我们可以新增一个`double`方法，使得字符串和数字翻倍。
+
+```javascript
+String.prototype.double = function () {
+  return this.valueOf() + this.valueOf();
+};
+
+'abc'.double()
+// abcabc
+
+Number.prototype.double = function () {
+  return this.valueOf() + this.valueOf();
+};
+
+(123).double()
+// 246
+```
+
+上面代码在`123`外面必须要加上圆括号，否则后面的点运算符（`.`）会被解释成小数点。
+
+但是，这种自定义方法和属性的机制，只能定义在包装对象的原型上，如果直接对原始类型的变量添加属性，则无效。
+
+```javascript
+var s = 'abc';
+
+s.p = 123;
+s.p // undefined
+```
+
+上面代码直接对字符串`abc`添加属性，结果无效。主要原因是上面说的，这里的包装对象是自动生成的，赋值后自动销毁，所以最后一行实际上调用的是一个新的包装对象。
+
+---
+# Boolean 对象
+
+## 概述
+
+`Boolean`对象是 JavaScript 的三个包装对象之一。作为构造函数，它主要用于生成布尔值的包装对象实例。
+
+```javascript
+var b = new Boolean(true);
+
+typeof b // "object"
+b.valueOf() // true
+```
+
+上面代码的变量`b`是一个`Boolean`对象的实例，它的类型是对象，值为布尔值`true`。
+
+注意，`false`对应的包装对象实例，布尔运算结果也是`true`。
+
+```javascript
+if (new Boolean(false)) {
+  console.log('true');
+} // true
+
+if (new Boolean(false).valueOf()) {
+  console.log('true');
+} // 无输出
+```
+
+上面代码的第一个例子之所以得到`true`，是因为`false`对应的包装对象实例是一个对象，进行逻辑运算时，被自动转化成布尔值`true`（因为所有对象对应的布尔值都是`true`）。而实例的`valueOf`方法，则返回实例对应的原始值，本例为`false`。
+
+## Boolean 函数的类型转换作用
+
+`Boolean`对象除了可以作为构造函数，还可以单独使用，将任意值转为布尔值。这时`Boolean`就是一个单纯的工具方法。
+
+```javascript
+Boolean(undefined) // false
+Boolean(null) // false
+Boolean(0) // false
+Boolean('') // false
+Boolean(NaN) // false
+
+Boolean(1) // true
+Boolean('false') // true
+Boolean([]) // true
+Boolean({}) // true
+Boolean(function () {}) // true
+Boolean(/foo/) // true
+```
+
+上面代码中几种得到`true`的情况，都值得认真记住。
+
+顺便提一下，使用双重的否运算符（`!`）也可以将任意值转为对应的布尔值。
+
+```javascript
+!!undefined // false
+!!null // false
+!!0 // false
+!!'' // false
+!!NaN // false
+!!1 // true
+!!'false' // true
+!![] // true
+!!{} // true
+!!function(){} // true
+!!/foo/ // true
+```
+
+最后，对于一些特殊值，`Boolean`对象前面加不加`new`，会得到完全相反的结果，必须小心。
+
+```javascript
+if (Boolean(false)) {
+  console.log('true');
+} // 无输出
+
+if (new Boolean(false)) {
+  console.log('true');
+} // true
+
+if (Boolean(null)) {
+  console.log('true');
+} // 无输出
+
+if (new Boolean(null)) {
+  console.log('true');
+} // true
+```
+---
+## 实例方法
+
+`Number`对象有4个实例方法，都跟将数值转换成指定格式有关。
+
+### Number.prototype.toString()
+
+`Number`对象部署了自己的`toString`方法，用来将一个数值转为字符串形式。
+
+```javascript
+(10).toString() // "10"
+```
+
+`toString`方法可以接受一个参数，表示输出的进制。如果省略这个参数，默认将数值先转为十进制，再输出字符串；否则，就根据参数指定的进制，将一个数字转化成某个进制的字符串。
+
+```javascript
+(10).toString(2) // "1010"
+(10).toString(8) // "12"
+(10).toString(16) // "a"
+```
+
+上面代码中，`10`一定要放在括号里，这样表明后面的点表示调用对象属性。如果不加括号，这个点会被 JavaScript 引擎解释成小数点，从而报错。
+
+```javascript
+10.toString(2)
+// SyntaxError: Unexpected token ILLEGAL
+```
+
+只要能够让 JavaScript 引擎不混淆小数点和对象的点运算符，各种写法都能用。除了为`10`加上括号，还可以在`10`后面加两个点，JavaScript 会把第一个点理解成小数点（即`10.0`），把第二个点理解成调用对象属性，从而得到正确结果。
+
+```javascript
+10..toString(2)
+// "1010"
+
+// 其他方法还包括
+10 .toString(2) // "1010"
+10.0.toString(2) // "1010"
+```
+
+这实际上意味着，可以直接对一个小数使用`toString`方法。
+
+```javascript
+10.5.toString() // "10.5"
+10.5.toString(2) // "1010.1"
+10.5.toString(8) // "12.4"
+10.5.toString(16) // "a.8"
+```
+
+通过方括号运算符也可以调用`toString`方法。
+
+```javascript
+10['toString'](2) // "1010"
+```
+
+`toString`方法只能将十进制的数，转为其他进制的字符串。如果要将其他进制的数，转回十进制，需要使用`parseInt`方法。
+
+## 自定义方法
+
+与其他对象一样，`Number.prototype`对象上面可以自定义方法，被`Number`的实例继承。
+
+```javascript
+Number.prototype.add = function (x) {
+  return this + x;
+};
+
+8['add'](2) // 10
+```
+
+上面代码为`Number`对象实例定义了一个`add`方法。在数值上调用某个方法，数值会自动转为`Number`的实例对象，所以就可以调用`add`方法了。由于`add`方法返回的还是数值，所以可以链式运算。
+
+```javascript
+Number.prototype.subtract = function (x) {
+  return this - x;
+};
+
+(8).add(2).subtract(4)
+// 6
+```
+
+上面代码在`Number`对象的实例上部署了`subtract`方法，它可以与`add`方法链式调用。
+
+我们还可以部署更复杂的方法。
+
+```javascript
+Number.prototype.iterate = function () {
+  var result = [];
+  for (var i = 0; i <= this; i++) {
+    result.push(i);
+  }
+  return result;
+};
+
+(8).iterate()
+// [0, 1, 2, 3, 4, 5, 6, 7, 8]
+```
+
+上面代码在`Number`对象的原型上部署了`iterate`方法，将一个数值自动遍历为一个数组。
+
+注意，数值的自定义方法，只能定义在它的原型对象`Number.prototype`上面，数值本身是无法自定义属性的。
+
+```javascript
+var n = 1;
+n.x = 1;
+n.x // undefined
+```
+
+上面代码中，`n`是一个原始类型的数值。直接在它上面新增一个属性`x`，不会报错，但毫无作用，总是返回`undefined`。这是因为一旦被调用属性，`n`就自动转为`Number`的实例对象，调用结束后，该对象自动销毁。所以，下一次调用`n`的属性时，实际取到的是另一个对象，属性`x`当然就读不出来。
+
+# String 对象
+### String.prototype.charAt()
+
+`charAt`方法返回指定位置的字符，参数是从`0`开始编号的位置。
+
+```javascript
+var s = new String('abc');
+
+s.charAt(1) // "b"
+s.charAt(s.length - 1) // "c"
+```
+
+这个方法完全可以用数组下标替代。
+
+```javascript
+'abc'.charAt(1) // "b"
+'abc'[1] // "b"
+```
+
+如果参数为负数，或大于等于字符串的长度，`charAt`返回空字符串。
+
+```javascript
+'abc'.charAt(-1) // ""
+'abc'.charAt(3) // ""
+```
+### String.prototype.concat()
+
+`concat`方法用于连接两个字符串，返回一个新字符串，不改变原字符串。
+
+```javascript
+var s1 = 'abc';
+var s2 = 'def';
+
+s1.concat(s2) // "abcdef"
+s1 // "abc"
+```
+
+该方法可以接受多个参数。
+
+```javascript
+'a'.concat('b', 'c') // "abc"
+```
+
+如果参数不是字符串，`concat`方法会将其先转为字符串，然后再连接。
+
+```javascript
+var one = 1;
+var two = 2;
+var three = '3';
+
+''.concat(one, two, three) // "123"
+one + two + three // "33"
+```
+
+上面代码中，`concat`方法将参数先转成字符串再连接，所以返回的是一个三个字符的字符串。作为对比，加号运算符在两个运算数都是数值时，不会转换类型，所以返回的是一个两个字符的字符串。
+
+### String.prototype.slice()
+
+`slice`方法用于从原字符串取出子字符串并返回，不改变原字符串。它的第一个参数是子字符串的开始位置，第二个参数是子字符串的结束位置（不含该位置）。
+
+```javascript
+'JavaScript'.slice(0, 4) // "Java"
+```
+
+如果省略第二个参数，则表示子字符串一直到原字符串结束。
+
+```javascript
+'JavaScript'.slice(4) // "Script"
+```
+
+如果参数是负值，表示从结尾开始倒数计算的位置，即该负值加上字符串长度。
+
+```javascript
+'JavaScript'.slice(-6) // "Script"
+'JavaScript'.slice(0, -6) // "Java"
+'JavaScript'.slice(-2, -1) // "p"
+```
+
+如果第一个参数大于第二个参数，`slice`方法返回一个空字符串。
+
+```javascript
+'JavaScript'.slice(2, 1) // ""
+```
+
+###  由于这些规则违反直觉，因此不建议使用`substring`方法，应该优先使用`slice`。  
+
+### String.prototype.substr()
+
+`substr`方法用于从原字符串取出子字符串并返回，不改变原字符串，跟`slice`和`substring`方法的作用相同。
+
+`substr`方法的第一个参数是子字符串的开始位置（从0开始计算），第二个参数是子字符串的长度。
+
+```javascript
+'JavaScript'.substr(4, 6) // "Script"
+```
+
+如果省略第二个参数，则表示子字符串一直到原字符串的结束。
+
+```javascript
+'JavaScript'.substr(4) // "Script"
+```
+
+如果第一个参数是负数，表示倒数计算的字符位置。如果第二个参数是负数，将被自动转为0，因此会返回空字符串。
+
+```javascript
+'JavaScript'.substr(-6) // "Script"
+'JavaScript'.substr(4, -1) // ""
+```
+
+上面代码中，第二个例子的参数`-1`自动转为`0`，表示子字符串长度为`0`，所以返回空字符串。
+
+### String.prototype.indexOf()，String.prototype.lastIndexOf()
+
+`indexOf`方法用于确定一个字符串在另一个字符串中第一次出现的位置，返回结果是匹配开始的位置。如果返回`-1`，就表示不匹配。
+
+```javascript
+'hello world'.indexOf('o') // 4
+'JavaScript'.indexOf('script') // -1
+```
+
+`indexOf`方法还可以接受第二个参数，表示从该位置开始向后匹配。
+
+```javascript
+'hello world'.indexOf('o', 6) // 7
+```
+
+`lastIndexOf`方法的用法跟`indexOf`方法一致，主要的区别是`lastIndexOf`从尾部开始匹配，`indexOf`则是从头部开始匹配。
+
+```javascript
+'hello world'.lastIndexOf('o') // 7
+```
+
+另外，`lastIndexOf`的第二个参数表示从该位置起向前匹配。
+
+```javascript
+'hello world'.lastIndexOf('o', 6) // 4
+```
+
+### String.prototype.trim()
+
+`trim`方法用于去除字符串两端的空格，返回一个新字符串，不改变原字符串。
+
+```javascript
+'  hello world  '.trim()
+// "hello world"
+```
+
+该方法去除的不仅是空格，还包括制表符（`\t`、`\v`）、换行符（`\n`）和回车符（`\r`）。
+
+```javascript
+'\r\nabc \t'.trim() // 'abc'
+```
+
+### String.prototype.toLowerCase()，String.prototype.toUpperCase()
+
+`toLowerCase`方法用于将一个字符串全部转为小写，`toUpperCase`则是全部转为大写。它们都返回一个新字符串，不改变原字符串。
+
+```javascript
+'Hello World'.toLowerCase()
+// "hello world"
+
+'Hello World'.toUpperCase()
+// "HELLO WORLD"
+```
+
+### String.prototype.match()
+
+`match`方法用于确定原字符串是否匹配某个子字符串，返回一个数组，成员为匹配的第一个字符串。如果没有找到匹配，则返回`null`。
+
+```javascript
+'cat, bat, sat, fat'.match('at') // ["at"]
+'cat, bat, sat, fat'.match('xt') // null
+```
+
+返回的数组还有`index`属性和`input`属性，分别表示匹配字符串开始的位置和原始字符串。
+
+```javascript
+var matches = 'cat, bat, sat, fat'.match('at');
+matches.index // 1
+matches.input // "cat, bat, sat, fat"
+```
+
+`match`方法还可以使用正则表达式作为参数，详见《正则表达式》一章。
+
+### String.prototype.search()，String.prototype.replace()
+
+`search`方法的用法基本等同于`match`，但是返回值为匹配的第一个位置。如果没有找到匹配，则返回`-1`。
+
+```javascript
+'cat, bat, sat, fat'.search('at') // 1
+```
+
+`search`方法还可以使用正则表达式作为参数，详见《正则表达式》一节。
+
+`replace`方法用于替换匹配的子字符串，一般情况下只替换第一个匹配（除非使用带有`g`修饰符的正则表达式）。
+
+```javascript
+'aaa'.replace('a', 'b') // "baa"
+```
+
+`replace`方法还可以使用正则表达式作为参数，详见《正则表达式》一节。
+
+### String.prototype.split()
+
+`split`方法按照给定规则分割字符串，返回一个由分割出来的子字符串组成的数组。
+
+```javascript
+'a|b|c'.split('|') // ["a", "b", "c"]
+```
+
+如果分割规则为空字符串，则返回数组的成员是原字符串的每一个字符。
+
+```javascript
+'a|b|c'.split('') // ["a", "|", "b", "|", "c"]
+```
+
+如果省略参数，则返回数组的唯一成员就是原字符串。
+
+```javascript
+'a|b|c'.split() // ["a|b|c"]
+```
+
+如果满足分割规则的两个部分紧邻着（即两个分割符中间没有其他字符），则返回数组之中会有一个空字符串。
+
+```javascript
+'a||c'.split('|') // ['a', '', 'c']
+```
+
+如果满足分割规则的部分处于字符串的开头或结尾（即它的前面或后面没有其他字符），则返回数组的第一个或最后一个成员是一个空字符串。
+
+```javascript
+'|b|c'.split('|') // ["", "b", "c"]
+'a|b|'.split('|') // ["a", "b", ""]
+```
+
+`split`方法还可以接受第二个参数，限定返回数组的最大成员数。
+
+```javascript
+'a|b|c'.split('|', 0) // []
+'a|b|c'.split('|', 1) // ["a"]
+'a|b|c'.split('|', 2) // ["a", "b"]
+'a|b|c'.split('|', 3) // ["a", "b", "c"]
+'a|b|c'.split('|', 4) // ["a", "b", "c"]
+```
+
+上面代码中，`split`方法的第二个参数，决定了返回数组的成员数。
+
+`split`方法还可以使用正则表达式作为参数，详见《正则表达式》一节。
+
+### String.prototype.localeCompare()
+
+`localeCompare`方法用于比较两个字符串。它返回一个整数，如果小于0，表示第一个字符串小于第二个字符串；如果等于0，表示两者相等；如果大于0，表示第一个字符串大于第二个字符串。
+
+```javascript
+'apple'.localeCompare('banana') // -1
+'apple'.localeCompare('apple') // 0
+```
+
+该方法的最大特点，就是会考虑自然语言的顺序。举例来说，正常情况下，大写的英文字母小于小写字母。
+
+```javascript
+'B' > 'a' // false
+```
+
+上面代码中，字母`B`小于字母`a`。因为 JavaScript 采用的是 Unicode 码点比较，`B`的码点是66，而`a`的码点是97。
+
+但是，`localeCompare`方法会考虑自然语言的排序情况，将`B`排在`a`的前面。
+
+```javascript
+'B'.localeCompare('a') // 1
+```
+
+上面代码中，`localeCompare`方法返回整数1，表示`B`较大。
+
+`localeCompare`还可以有第二个参数，指定所使用的语言（默认是英语），然后根据该语言的规则进行比较。
+
+```javascript
+'ä'.localeCompare('z', 'de') // -1
+'ä'.localeCompare('z', 'sv') // 1
+```
+
+上面代码中，`de`表示德语，`sv`表示瑞典语。德语中，`ä`小于`z`，所以返回`-1`；瑞典语中，`ä`大于`z`，所以返回`1`。
+
+---
+# Math 对象
+
+`Math`是 JavaScript 的原生对象，提供各种数学功能。该对象不是构造函数，不能生成实例，所有的属性和方法都必须在`Math`对象上调用。
+
+## 静态属性
+
+`Math`对象的静态属性，提供以下一些数学常数。
+
+- `Math.E`：常数`e`。
+- `Math.LN2`：2 的自然对数。
+- `Math.LN10`：10 的自然对数。
+- `Math.LOG2E`：以 2 为底的`e`的对数。
+- `Math.LOG10E`：以 10 为底的`e`的对数。
+- `Math.PI`：常数 Pi。
+- `Math.SQRT1_2`：0.5 的平方根。
+- `Math.SQRT2`：2 的平方根。
+
+```javascript
+Math.E // 2.718281828459045
+Math.LN2 // 0.6931471805599453
+Math.LN10 // 2.302585092994046
+Math.LOG2E // 1.4426950408889634
+Math.LOG10E // 0.4342944819032518
+Math.PI // 3.141592653589793
+Math.SQRT1_2 // 0.7071067811865476
+Math.SQRT2 // 1.4142135623730951
+```
+
+这些属性都是只读的，不能修改。
+
+## 静态方法
+
+`Math`对象提供以下一些静态方法。
+
+- `Math.abs()`：绝对值
+- `Math.ceil()`：向上取整
+- `Math.floor()`：向下取整
+- `Math.max()`：最大值
+- `Math.min()`：最小值
+- `Math.pow()`：指数运算
+- `Math.sqrt()`：平方根
+- `Math.log()`：自然对数
+- `Math.exp()`：e的指数
+- `Math.round()`：四舍五入
+- `Math.random()`：随机数
+
+### Math.round()
+
+`Math.round`方法用于四舍五入。
+
+```javascript
+Math.round(0.1) // 0
+Math.round(0.5) // 1
+Math.round(0.6) // 1
+
+// 等同于
+Math.floor(x + 0.5)
+```
+
+注意，它对负数的处理（主要是对`0.5`的处理）。
+
+```javascript
+Math.round(-1.1) // -1
+Math.round(-1.5) // -1
+Math.round(-1.6) // -2
+```
+
+### Math.random()
+
+`Math.random()`返回0到1之间的一个伪随机数，可能等于0，但是一定小于1。
+
+```javascript
+Math.random() // 0.7151307314634323
+```
+
+任意范围的随机数生成函数如下。
+
+```javascript
+function getRandomArbitrary(min, max) {
+  return Math.random() * (max - min) + min;
+}
+
+getRandomArbitrary(1.5, 6.5)
+// 2.4942810038223864
+```
+
+任意范围的随机整数生成函数如下。
+
+```javascript
+function getRandomInt(min, max) {
+  return Math.floor(Math.random() * (max - min + 1)) + min;
+}
+
+getRandomInt(1, 6) // 5
+```
+
+返回随机字符的例子如下。
+
+```javascript
+function random_str(length) {
+  var ALPHABET = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+  ALPHABET += 'abcdefghijklmnopqrstuvwxyz';
+  ALPHABET += '0123456789-_';
+  var str = '';
+  for (var i=0; i < length; ++i) {
+    var rand = Math.floor(Math.random() * ALPHABET.length);
+    str += ALPHABET.substring(rand, rand + 1);
+  }
+  return str;
+}
+
+random_str(6) // "NdQKOr"
+```
+
+上面代码中，`random_str`函数接受一个整数作为参数，返回变量`ALPHABET`内的随机字符所组成的指定长度的字符串。
+
+### 三角函数方法
+
+`Math`对象还提供一系列三角函数方法。
+
+- `Math.sin()`：返回参数的正弦（参数为弧度值）
+- `Math.cos()`：返回参数的余弦（参数为弧度值）
+- `Math.tan()`：返回参数的正切（参数为弧度值）
+- `Math.asin()`：返回参数的反正弦（返回值为弧度值）
+- `Math.acos()`：返回参数的反余弦（返回值为弧度值）
+- `Math.atan()`：返回参数的反正切（返回值为弧度值）
+
+```javascript
+Math.sin(0) // 0
+Math.cos(0) // 1
+Math.tan(0) // 0
+
+Math.sin(Math.PI / 2) // 1
+
+Math.asin(1) // 1.5707963267948966
+Math.acos(1) // 0
+Math.atan(1) // 0.7853981633974483
+```
+---
+# Date 对象
+
+`Date`对象是 JavaScript 原生的时间库。它以1970年1月1日00:00:00作为时间的零点，可以表示的时间范围是前后各1亿天（单位为毫秒）。
+
+挺麻烦的，而且觉得不常用，单独拿出来了，要用再去查吧。
+
+---
+# RegExp 对象
+`RegExp`对象提供正则表示式的功能。
+
+## 概述
+
+正则表达式（regular expression）是一种表达文本模式（即字符串结构）的方法，有点像字符串的模板，常常用来按照“给定模式”匹配文本。比如，正则表达式给出一个 Email 地址的模式，然后用它来确定一个字符串是否为 Email 地址。JavaScript 的正则表达式体系是参照 Perl 5 建立的。
+
+新建正则表达式有两种方法。一种是使用字面量，以斜杠表示开始和结束。
+
+```javascript
+var regex = /xyz/;
+```
+
+另一种是使用`RegExp`构造函数。
+
+```javascript
+var regex = new RegExp('xyz');
+```
+
+上面两种写法是等价的，都新建了一个内容为`xyz`的正则表达式对象。它们的主要区别是，第一种方法在引擎编译代码时，就会新建正则表达式，第二种方法在运行时新建正则表达式，所以前者的效率较高。而且，前者比较便利和直观，所以实际应用中，基本上都采用字面量定义正则表达式。
+
+---
 
 
 
